...
                                        Button(role: .destructive) {
                                            todoViewModel.deleteTodo(todo)
                                        } label: {
                                            Label(Localization.labels.delete, systemImage: "trash")
                                        }
                                        .tint(Color.theme.red)
                                        .accessibilityIdentifier("TodaysTodosDeleteTodo")
                                        
                                    }
                                    .swipeActions(edge: .leading, allowsFullSwipe: true) {
                                        
                                        Button {
                                            todoViewModel.setToDone(todayTodo)
...
                                    .foregroundColor(StyleUtils.getTextColorForToday(todo: todo, isSelectedForToday: false))
                                    .listRowBackground(Color.clear)
                                    .font(Font.app.listItem)
                                }
                                .onMove(perform: move)
                            }
                            .accessibilityIdentifier("TodaysListContainer")
                            .background(Color.clear)
                            .frame(height: recurringTasks.isEmpty ? geo.size.height - 130 : geo.size.height *  0.618)
                            
                            Spacer(minLength: 10)
                            
                            VStack (spacing: 0) {
...
                                showingAddTodo = true
                            }
                        }) {
                            Image(systemName: "plus.circle")
                                .foregroundColor(Color.theme.primary)
                        }
                        .accessibilityIdentifier("AddTodayTodoButton")
                    }
                }
            }
            .sheet(item: $sharedTodos) { wrapper in
                let todos : [Todo] = wrapper.todos
                let dateString = StyleUtils.dateTimeFormatter.string(from: Date())
...
