...
                    .tag(ClaraTab.all.intValue)
                    .accessibility(identifier: "AllTodosTab")
                TodaysListView()
                    .tabItem {
                        Label(Localization.labels.todayNav, systemImage: "calendar")
                    }.tag(ClaraTab.today.intValue)
                    .accessibility(identifier: "TodayTab")
                if categotyViewModel.hasCategories() {
                    CategoriesOverviewView()
                        .tabItem {
                            Label(Localization.labels.categoriesNav, systemImage: "line.3.horizontal.decrease")
                        }.tag(ClaraTab.categories.intValue)
                        .accessibility(identifier: "CategoriesTab")
...
        }
    }

}

enum ClaraTab {
    case all
    case today
    case recurringtasks
    case categories
    
    var intValue : Int{
        switch self {
...
