...
            Button(action: {
                isPriorityMatrixPresented = true
            }) {
                Label(Localization.labels.priorityMatrix, systemImage: "arrow.clockwise")
                    .foregroundColor(Color.theme.primary)
            }
            .accessibilityIdentifier("PriorityMatrixButton")
            
            Button(action: {
                isSettingsPresented = true
            }) {
                Label(Localization.labels.properties, systemImage: "gearshape")
                    .foregroundColor(Color.theme.primary)
...
                Label(Localization.labels.about, systemImage: "info.circle")
            }
            
        } label: {
            Label("Menu", systemImage: "line.horizontal.3")
                .foregroundColor(Color.theme.primary)
                .accessibilityIdentifier("ClaraMenu")
        }
        .sheet(isPresented: $isPriorityMatrixPresented) {
            let todayTasks : [Todo] = todoViewModel.todayTodos.map(\.todo).filter{ !$0.isDone }
            PriorityMatrixView(
                tasks: todayTasks,
                onConfirm: { urgentTasks, importantAndUrgentTasks, nothingOfBothTasks, importantTasks in
...
